-Add support for background colors of certain scopes -Small css adjustments -Fix issues where lines would show gaps between lines in multi-line highlights.

--- a/css/export.css
+++ b/css/export.css
@@ -14,13 +14,13 @@ td div {
     white-space: pre-line;      /* CSS 3 (and 2.1 as well, actually) */
     word-wrap: break-word;      /* IE */
 }
-.code_text { font: /* %font_size% */pt /* %font_face% */, Consolas, Monospace; }
+.code_text { font: /* %font_size% */pt /* %font_face% */, "Courier New", Monospace; }
 .code_page { background-color: /* %page_bg% */; }
 .simple_code_page { background-color: white; color: black }
 .code_gutter { display: /* %display_mode% */; background-color: /* %gutter_bh% */; }
 .code_line { padding-left: 10px; }
 td.code_line div { width: 100%; }
-span { border: 0; margin: 0; padding: 0; }
+span { display:inline-block; border: 0; margin: 0; padding: 0; }
 span.bold { font-weight: bold; }
 span.italic { font-style: italic; }
 span.normal { font-style: normal; }
@@ -33,8 +33,6 @@ div#toolbarhide {
     right: 0px;
     padding-top: 5px;
     padding-right: 10px;
-    -webkit-transform: translateZ(0);    /* webkit flicker fix */
-    -webkit-font-smoothing: antialiased; /* webkit text rendering fix */
 }
 div#toolbar {
     visibility: hidden;
@@ -43,6 +41,8 @@ div#toolbar {
     -moz-border-radius: 5px;
     border-radius: 5px;
     opacity: 0;
+    -webkit-transform: translateZ(0);    /* webkit flicker fix */
+    -webkit-font-smoothing: antialiased; /* webkit text rendering fix */
     -webkit-transition: all .25s ease-in;
     -moz-transition: all .25s ease-in;
     -ms-transition: all .25s ease-in;
@@ -96,7 +96,7 @@ div#toolbar img {
     margin-left: -999em;
     position: absolute;
     padding: 0.8em 1em;
-    background: lightyellow; border: solid black;
+    background: #FFFFE0; border: solid black;
     font-family: Calibri, Tahoma, Geneva, sans-serif;
     font-size: 10pt;
     font-weight: bold;
@@ -130,7 +130,7 @@ div#comment_wrapper {
 }
 table#comment_table {
     border: thin solid; border-collapse: collapse;
-    color: #000000; background-color: lightyellow; margin: auto auto;
+    color: #000000; background-color: #FFFFE0; margin: auto auto;
 }
 div.table_footer { text-align:right; font-size: 8pt; font-weight: bold;}
 a.table_close { float: right; }
